Bug 179563 - Typo/mismatched strings in kickoff/leave/logout box
Summary: Typo/mismatched strings in kickoff/leave/logout box
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-04 02:17 UTC by Jonas Thorell
Modified: 2009-01-18 01:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonas Thorell 2009-01-04 02:17:50 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

I'm using KDE 4.1.87, and the messages in the "Leave" tab of Kickoff are somewhat mismatched between kickoff and the confirmation box (using English as my system language).

Everything but shutdown is fine (lock and the suspend-options only because they don't get a confirmation dialogue) but shutdown is inconsistent. In kickoff, the main label says "Shutdown" (with a, depending on color scheme and plasma theme, harder to read "Turn off the computer") but the confirmation button says "Turn off computer". 

There are two, relatively minor but still, problems here:

*First, it's inconsistent. If the confirmation button says "Turn off computer" that should also be the main label in the menu.
*Secondly, does kickoff and the confirmation box use the same string in the localization files? It doesn't look like it, since in kickoff the definite determiner is used while it's not in the confirmation dialogue.
Comment 1 Aaron J. Seigo 2009-01-04 02:43:58 UTC
holy nitpick. this can't be fixed until 4.3 due to string freeze. there are other discrepancies as well (Restart the computer <-> Restart computer). the dialog is in ksmserver and kickoff is part of plasma, so they need to be manually synced up.

obviously, this didn't happen for 4.2.

i'm really on the fence with changing the titles in kickoff, but the phrases that are common should obviously be synced.
Comment 2 Artur Souza (MoRpHeUz) 2009-01-18 01:15:22 UTC
SVN commit 912668 by asouza:

Fix the differences between kickoff labels and ksmserver

Update the labels but keep 'Shutdown' in kickoff menu. The
approach here seems to give a "one word" description of the
action and a little label with a phrase explaining the action
in kickoff menu, and the same phrase in ksmserver dialog.

So no need to change the word 'Shutdown' in this menu, but 
synced all other 'explaining phrases'.

BUG:179563


 M  +3 -3      leavemodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=912668